--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,13 @@
+
 .white {
-  background-image: url(../assets/images/leaf.gif);
+  background-image: url(../assets/images/leaf.gif)
 }
 
 .black {
-  background-image: url(../assets/images/bricks.gif);
+  
+  background-image: url(../assets/images/bricks.gif)
 }
+
 
 .flex-container {
   height: 100%;
@@ -22,8 +25,8 @@
 }
 .flex-container > div {
   background-color: #f1f1f1;
-  color: RED;
-  width: 12%;
+  color:RED;
+  width: 10%;
   height: 40px;
   padding: 0;
   margin: 0;
@@ -31,7 +34,9 @@
   vertical-align: middle;
   justify-content: center; /* center items vertically, in this case */
   align-items: center; /* center items horizontally, in this case */
-
+   
   line-height: 75px;
   font-size: 10px;
 }
+
+ 
